<resources>
    <string name="app_name">User Info Manager</string>
    <string name="empty_data">Empty Data</string>
    <string name="add_new_user">Add New User</string>
    <string name="job_title">Job Title</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="user_details">User Details</string>
    <string name="required_field">Required field</string>
    <string name="user_added_successfully">User Added Successfully!</string>
    <string name="years">" years"</string>
</resources>