<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_9sdp"
            android:background="@color/white"
            android:src="@drawable/ic_chevron_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/user_details"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_name_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_9sdp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@id/tv_name_key"
            app:layout_constraintTop_toTopOf="@id/tv_name_key" />

        <TextView
            android:id="@+id/tv_age_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_key" />

        <TextView
            android:id="@+id/tv_age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_9sdp"
            android:gravity="center"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@id/tv_age_key"
            app:layout_constraintTop_toTopOf="@id/tv_age_key"
            tools:text="@string/age" />

        <TextView
            android:id="@+id/tv_job_title_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:gravity="center"
            android:text="@string/job_title"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_age_key" />

        <TextView
            android:id="@+id/tv_job_title_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_9sdp"
            android:gravity="center"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@id/tv_job_title_key"
            app:layout_constraintTop_toTopOf="@id/tv_job_title_key"
            tools:text="@string/job_title" />

        <TextView
            android:id="@+id/tv_gender_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:gravity="center"
            android:text="@string/gender"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_job_title_key" />

        <TextView
            android:id="@+id/tv_gender_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_9sdp"
            android:gravity="center"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@id/tv_gender_key"
            app:layout_constraintTop_toTopOf="@id/tv_gender_key"
            tools:text="@string/gender" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progress_bar"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>